--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,7 @@ strip_trailing_spaces		smart
 linux_display_server		wayland
 
 # Font Configuration
-font_family			NotoMono Nerd Font
+font_family			NotoMono Nerd Font Bold
 font_size			11
 
 # Cell Configuration
